tests/baselines/reference/cyclicGenericTypeInstantiation.errors.txt
tests/cases/compiler/cyclicGenericTypeInstantiation.ts(20,1): error TS2321: Excessive stack depth comparing types '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }' and '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }'.
tests/cases/compiler/cyclicGenericTypeInstantiation.ts(20,1): error TS2321: Excessive stack depth comparing types '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }' and '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }'.


==== tests/cases/compiler/cyclicGenericTypeInstantiation.ts (2 errors) ====
    function foo<T>() {
        var z = foo<typeof y>();
        var y: {
            y2: typeof z
        };
        return y;
    }
    
    
    function bar<T>() {
        var z = bar<typeof y>();
        var y: {
            y2: typeof z;
        }
        return y;
    }
    
    var a = foo<number>();
    var b = bar<number>();
    a = b;
    ~
!!! error TS2321: Excessive stack depth comparing types '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }' and '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }'.
    ~~~~~
!!! error TS2321: Excessive stack depth comparing types '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }' and '{ y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: { y2: any; }; }; }; }; }; }; }; }; }; }; }'.
    